loopfor.LoopCourse.scala.error
Compilation error:
LoopCourse:5: error: not found: value positionInit
positionInit = (x,y)
^LoopCourse:13: error: not found: value positionInit
  if ((getX(), getY()) == positionInit)
                          ^