loopfor.LoopCourse.scala.code
var nbTour = 0
var x = getX():Int
var y = getY():Int

positionInit = (x,y)

while(nbTour != 4)
{
  if (estFaceMur)
  	gauche()
	else
 		avance()
  if ((getX(), getY()) == positionInit)
  	nbTour += 1
}